adding bus to the repositary

--- a/1.-Python/3.-Bus/bus.ipynb
+++ b/1.-Python/3.-Bus/bus.ipynb
@@ -35,7 +35,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,10 +61,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(stops)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,10 +89,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 13, 11, 10, 14, 10, 7, 5, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_passengers=[]\n",
+    "people = 0\n",
+    "for i in range(9):\n",
+    "    people = people + stops[i][0] - stops[i][1]\n",
+    "    #people += stops[i][0] - stops[i][1]\n",
+    "    list_passengers.append(people)\n",
+    "print(list_passengers)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,10 +119,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(list_passengers)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,10 +146,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.333333333333334\n",
+      "3.197221015541813\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum(list_passengers)/len(list_passengers))\n",
+    "print(np.std(list_passengers))"
+   ]
   }
  ],
  "metadata": {
@@ -117,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
