adding robin hood to repositary

--- a/1.-Python/4.-Robin-Hood/robin-hood.ipynb
+++ b/1.-Python/4.-Robin-Hood/robin-hood.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,10 +55,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(-3, 2), (2, 2), (4, 5), (5, 7)}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dupes = []\n",
+    "for point in points:\n",
+    "    if points.count(point) > 1:\n",
+    "        dupes.append(point)\n",
+    "        \n",
+    "set(dupes)\n",
+    "        "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,10 +89,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 6 2 2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quadrant1=0\n",
+    "quadrant2=0\n",
+    "quadrant3=0\n",
+    "quadrant4=0\n",
+    "for item1 in points:\n",
+    "    if item1[0] == 0 or item1[1] == 0:\n",
+    "        continue\n",
+    "    elif item1[0]>0 and item1[1]>0:\n",
+    "        quadrant1+=1\n",
+    "    elif item1[0]<0 and item1[1]>0:\n",
+    "        quadrant2+=1\n",
+    "    elif item1[0]<0 and item1[1]<0:\n",
+    "        quadrant3+=1\n",
+    "    elif item1[0]>0 and item1[1]<0:\n",
+    "        quadrant4+=1\n",
+    "        \n",
+    "print(quadrant1, quadrant2, quadrant3, quadrant4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -88,10 +143,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 2)\n",
+      "(0, -2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "    distance_arrow=[]\n",
+    "    for item2 in points:\n",
+    "        point=(item2[0]**2 + item2[1]**2)**0.5\n",
+    "        distance_arrow.append(point)\n",
+    "\n",
+    "list(zip(points,distance_arrow))\n",
+    "for z, x in zip(points,distance_arrow):\n",
+    "    if x == min(distance_arrow):\n",
+    "        print(z)\n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -103,10 +180,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "count=0\n",
+    "for z in distance_arrow:\n",
+    "    if z > 9:\n",
+    "        count+=1\n",
+    "print(count)"
+   ]
   }
  ],
  "metadata": {
@@ -125,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
