adding the last 2 exercices for python: temp and R.P.S.

--- a/1.-Python/6.-Rock–Paper–Scissors/rock-paper-scissors.ipynb
+++ b/1.-Python/6.-Rock–Paper–Scissors/rock-paper-scissors.ipynb
@@ -32,10 +32,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -46,10 +48,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gestures=[\"rock\", \"paper\", \"scissors\"]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,10 +65,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How many rounds do you want to play? 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "    n_rounds = int(input('How many rounds do you want to play? '))\n",
+    "    while n_rounds%2 == 0:\n",
+    "        print('Only possible odd numbers. Try again ')\n",
+    "        n_rounds = int(input('How many rounds do you want to play? '))\n",
+    "    \n",
+    "\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -76,10 +96,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "rounds_to_win = round(n_rounds/2)+1\n",
+    "print(rounds_to_win)\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -90,10 +122,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cpu_score= 0 \n",
+    "player_score = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -105,10 +140,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rock\n"
+     ]
+    }
+   ],
+   "source": [
+    "computer_choice=random.choice(gestures)\n",
+    "print(computer_choice)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,10 +166,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Choose between rock, paper or scissors: rock\n"
+     ]
+    }
+   ],
+   "source": [
+    "player_choice=input(\"Choose between rock, paper or scissors: \")\n",
+    "while player_choice not in gestures:\n",
+    "    player_choice = input(\"Please, only choose between rock, paper o scissors: \")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -135,10 +193,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "    num_battle = 0\n",
+    "    if computer_choice == player_choice:\n",
+    "        num_battle=0\n",
+    "    elif computer_choice == 'rock' and player_choice == 'scissors':\n",
+    "        num_battle=1\n",
+    "    elif computer_choice == 'paper' and player_choice == 'rock':\n",
+    "        num_battle=1\n",
+    "    elif computer_choice == 'scissors' and player_choice == 'paper':\n",
+    "        num_battle=1\n",
+    "    elif computer_choice == 'paper' and player_choice == 'scissors':\n",
+    "        num_battle=2\n",
+    "    elif computer_choice == 'scissors' and player_choice == 'rock':\n",
+    "        num_battle=2\n",
+    "    elif computer_choice == 'rock' and player_choice == 'paper':\n",
+    "        num_battle=2\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -150,10 +225,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rock\n",
+      "rock\n",
+      "There has been a tie\n"
+     ]
+    }
+   ],
+   "source": [
+    "if num_battle == 0:\n",
+    "    print(\"There has been a tie\")\n",
+    "elif num_battle == 1:\n",
+    "    cpu_score += 1\n",
+    "    print(\"Computer won this round\")\n",
+    "elif num_battle == 2:\n",
+    "    player_score += 1 \n",
+    "    print(\"Player won this round\")\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -168,13 +264,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How many rounds do you want to play? 3\n",
+      "Choose between rock, paper or scissors: rock\n",
+      "There has been a tie\n",
+      "Choose between rock, paper or scissors: rock\n",
+      "There has been a tie\n",
+      "Choose between rock, paper or scissors: rock\n",
+      "Player won this round\n",
+      "Choose between rock, paper or scissors: paper\n",
+      "There has been a tie\n",
+      "Choose between rock, paper or scissors: paper\n",
+      "Player won this round\n",
+      "You won the game\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "gestures=[\"rock\", \"paper\", \"scissors\"]\n",
+    "n_rounds = int(input('How many rounds do you want to play? '))\n",
+    "cpu_score= 0 \n",
+    "player_score = 0\n",
+    "\n",
+    "while n_rounds%2 == 0:\n",
+    "    print('Only possible odd numbers. Try again ')\n",
+    "    n_rounds = int(input('How many rounds do you want to play? '))\n",
+    "rounds_to_win = round(n_rounds/2)\n",
+    "while cpu_score < rounds_to_win and player_score<rounds_to_win:\n",
+    "    \n",
+    "    #Computer escoge\n",
+    "    if rounds_to_win<n_rounds:\n",
+    "        computer_choice=random.choice(gestures)\n",
+    "        \n",
+    "        #Player escoge\n",
+    "        player_choice=input(\"Choose between rock, paper or scissors: \")\n",
+    "        while player_choice not in gestures:\n",
+    "            player_choice = input(\"Please, only choose between rock, paper o scissors: \")\n",
+    "            \n",
+    "          #Ver quien gana la round  \n",
+    "        num_battle = 0\n",
+    "        if computer_choice == player_choice:\n",
+    "            num_battle=0\n",
+    "        elif computer_choice == 'rock' and player_choice == 'scissors':\n",
+    "            num_battle=1\n",
+    "        elif computer_choice == 'paper' and player_choice == 'rock':\n",
+    "            num_battle=1\n",
+    "        elif computer_choice == 'scissors' and player_choice == 'paper':\n",
+    "            num_battle=1\n",
+    "        elif computer_choice == 'paper' and player_choice == 'scissors':\n",
+    "            num_battle=2\n",
+    "        elif computer_choice == 'scissors' and player_choice == 'rock':\n",
+    "            num_battle=2\n",
+    "        elif computer_choice == 'rock' and player_choice == 'paper':\n",
+    "            num_battle=2\n",
+    "            \n",
+    "        #contar quien se lleva la round \n",
+    "        if num_battle == 0:\n",
+    "            print(\"There has been a tie\")\n",
+    "        elif num_battle == 1:\n",
+    "            cpu_score += 1\n",
+    "            print(\"Computer won this round\")\n",
+    "        elif num_battle == 2:\n",
+    "            player_score += 1 \n",
+    "            print(\"Player won this round\")\n",
+    "            \n",
+    "\n",
+    "if cpu_score == player_score:\n",
+    "    print(\"The game end's as a Tie\")\n",
+    "elif cpu_score < player_score:\n",
+    "    print(\"You won the game\")\n",
+    "elif cpu_score > player_score:\n",
+    "    print(\"The Computer won the game\")\n",
+    "\n"
+   ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "#### 11. Print the winner of the game based on who won more rounds.\n",
@@ -183,10 +355,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You won the game\n"
+     ]
+    }
+   ],
+   "source": [
+    "if cpu_score == player_score:\n",
+    "    print(\"The game end's as a Tie\")\n",
+    "elif cpu_score < player_score:\n",
+    "    print(\"You won the game\")\n",
+    "elif cpu_score > player_score:\n",
+    "    print(\"The Computer won the game\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -226,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
