--- a/1.-Python/5.-Temperature-Processor/temperature.ipynb
+++ b/1.-Python/5.-Temperature-Processor/temperature.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,10 +53,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "minim_temp= min(temperatures_C)\n",
+    "print(minim_temp)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,10 +78,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_temp=max(temperatures_C)\n",
+    "print(max_temp)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,10 +103,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[70, 76, 80, 81, 80, 83, 90, 79]\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp_70_mas=[]\n",
+    "for item1 in temperatures_C:\n",
+    "    if item1>=70:\n",
+    "        temp_70_mas.append(item1)\n",
+    "        \n",
+    "print(temp_70_mas)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,10 +132,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "60.25"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(temperatures_C)/len(temperatures_C)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,10 +159,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[33, 66, 65, 62.0, 59, 60, 62, 64, 70, 76, 80, 81, 80, 83, 90, 79, 61, 53, 50, 49, 53, 48, 45, 39]\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperatures_C = [33, 66, 65, 0, 59, 60, 62, 64, 70, 76, 80, 81, 80, 83, 90, 79, 61, 53, 50, 49, 53, 48, 45, 39]\n",
+    "temperatures_C[3] = (temperatures_C[2]+temperatures_C[4])/2\n",
+    "print(temperatures_C)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -150,10 +212,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the cooling system needs to be changed because their is 8 greater or equal to 70ºC\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp_70_mas=[70, 76, 80, 81, 80, 83, 90, 79]\n",
+    "\n",
+    "while temperatures_C != 0:\n",
+    "    if len(temp_70_mas)>4:\n",
+    "        print(\"the cooling system needs to be changed because their is\", len(temp_70_mas), \"greater or equal to 70ºC\")\n",
+    "        break\n",
+    "        \n",
+    "    if max(temperatures_C)>80:\n",
+    "        print(\"the cooling system needs to be changed because their is maximum of \", max(temperatures_C), \"higher than 80ºC\")\n",
+    "        break\n",
+    "        \n",
+    "    if (sum(temperatures_C)/len(temperatures_C))>65:\n",
+    "        print(\"the cooling system needs to be changed because the average temperature is \", sum(temperatures_C)/len(temperatures_C))\n",
+    "        break\n",
+    "        \n",
+    "    else:\n",
+    "         print(\"the cooling system does not need to be changed\")\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -254,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
