--- a/1.-Python/6.-Rock–Paper–Scissors/rock-paper-scissors.ipynb
+++ b/1.-Python/6.-Rock–Paper–Scissors/rock-paper-scissors.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,15 +225,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rock\n",
-      "rock\n",
       "There has been a tie\n"
      ]
     }
@@ -264,25 +262,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "How many rounds do you want to play? 3\n",
+      "How many rounds do you want to play? 4\n",
+      "Only possible odd numbers. Try again \n",
+      "How many rounds do you want to play? 5\n",
       "Choose between rock, paper or scissors: rock\n",
-      "There has been a tie\n",
+      "Computer won this round\n",
       "Choose between rock, paper or scissors: rock\n",
-      "There has been a tie\n",
-      "Choose between rock, paper or scissors: rock\n",
-      "Player won this round\n",
-      "Choose between rock, paper or scissors: paper\n",
-      "There has been a tie\n",
-      "Choose between rock, paper or scissors: paper\n",
-      "Player won this round\n",
-      "You won the game\n"
+      "Computer won this round\n",
+      "The Computer won the game\n"
      ]
     }
    ],
